--- a/student_submissions_output/student_881253_Parker_Measom.json
+++ b/student_submissions_output/student_881253_Parker_Measom.json
@@ -13,6 +13,6 @@
       "content": "I was most interested in Chapter 2 of How to Measure Anything, especially the section about Emily Rosa’s experiment. I’ve always been fascinated by stories like hers, and I’ve also enjoyed reading about James Randi and his work debunking con-artists. What stood out to me most about Rosa’s experiment was its simplicity. The chapter emphasizes how straightforward her approach was, and yet it still had a major impact.\nIt really got me thinking about work and life in general, and how much more we could achieve by better understanding how to measure things. I tend to overcomplicate problems, but this reminded me that starting with what I already know and applying the simplest possible solution can often take me a long way.\nIn my work, quantifying information seems to be a constant need and I can see how approaching measurement challenges with a simple mindset, and asking basic questions first could lead to quicker, more effective solutions.\nQuestion:\nWhat does Emily Rosa's story tell us about the value of curiosity and asking basic questions, even in professional settings?"
     }
   ],
-  "status": "Successfully extracted 2 entries.",
+  "status": "Successfully extracted 2 entries for student 881253. (from iframe)",
   "error": null
 }
