--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,146 @@
-streamlit
-langchain-google-genai
-python-dotenv
-asyncio
-browser-use[memory]
-pydantic
+altair==5.5.0
+annotated-types==0.7.0
+anthropic==0.51.0
+anyio==4.9.0
+asyncio==3.4.3
+attrs==25.3.0
+backoff==2.2.1
+beautifulsoup4==4.13.4
+blinker==1.9.0
+boto3==1.38.12
+botocore==1.38.12
+browser-use==0.1.45
+cachetools==5.5.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.1.8
+colorama==0.4.6
+cython==3.1.0
+defusedxml==0.7.1
+distro==1.9.0
+faiss-cpu==1.11.0
+filelock==3.18.0
+filetype==1.2.0
+fsspec==2025.3.2
+gitdb==4.0.12
+gitpython==3.1.44
+google-ai-generativelanguage==0.6.18
+google-api-core==2.24.2
+google-auth==2.40.1
+googleapis-common-protos==1.70.0
+greenlet==3.2.2
+grpcio==1.71.0
+grpcio-status==1.62.3
+h11==0.16.0
+h2==4.2.0
+hf-xet==1.1.0
+hpack==4.1.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.31.1
+hyperframe==6.1.0
+idna==3.10
+jinja2==3.1.6
+jiter==0.9.0
+jmespath==1.0.1
+joblib==1.5.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+langchain==0.3.22
+langchain-anthropic==0.3.3
+langchain-aws==0.2.19
+langchain-core==0.3.49
+langchain-deepseek==0.1.3
+langchain-google-genai==2.1.2
+langchain-ollama==0.3.0
+langchain-openai==0.3.11
+langchain-text-splitters==0.3.7
+langsmith==0.3.42
+linkify-it-py==2.0.3
+markdown-it-py==3.0.0
+markdownify==1.1.0
+markupsafe==3.0.2
+mdit-py-plugins==0.4.2
+mdurl==0.1.2
+mem0ai==0.1.93
+monotonic==1.6
+mpmath==1.3.0
+narwhals==1.38.2
+networkx==3.4.2
+numpy==1.26.4
+ollama==0.4.8
+openai==1.78.0
+orjson==3.10.18
+outcome==1.3.0.post0
+packaging==24.2
+pandas==2.2.3
+patchright==1.52.2
+pillow==11.2.1
+platformdirs==4.3.8
+playwright==1.52.0
+portalocker==2.10.1
+posthog==3.25.0
+proto-plus==1.26.1
+protobuf==6.30.2
+psutil==7.0.0
+psycopg2-binary==2.9.10
+pyarrow==20.0.0
+pyasn1==0.6.1
+pyasn1-modules==0.4.2
+pydantic==2.10.6
+pydantic-core==2.27.2
+pydeck==0.9.1
+pyee==13.0.0
+pygments==2.19.1
+pyobjc-core==11.0
+pyobjc-framework-cocoa==11.0
+pyperclip==1.9.0
+pysocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2024.2
+pyyaml==6.0.2
+qdrant-client==1.14.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+rich==14.0.0
+rpds-py==0.24.0
+rsa==4.9.1
+s3transfer==0.12.0
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.3
+screeninfo==0.8.1
+selenium==4.32.0
+sentence-transformers==4.1.0
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.7
+sqlalchemy==2.0.40
+streamlit==1.45.0
+sympy==1.14.0
+tenacity==9.1.2
+textual==3.2.0
+threadpoolctl==3.6.0
+tiktoken==0.9.0
+tokenizers==0.21.1
+toml==0.10.2
+torch==2.7.0
+tornado==6.4.2
+tqdm==4.67.1
+transformers==4.51.3
+trio==0.30.0
+trio-websocket==0.12.2
+typing-extensions==4.13.2
+tzdata==2025.2
+uc-micro-py==1.0.3
+urllib3==2.4.0
+websocket-client==1.8.0
+wsproto==1.2.0
+zstandard==0.23.0
